adding shopping admin page
