# back/src/features/admin/routes.ts
@@ -45,3 +45,13 @@ router
 router
   .route('/admin/access')
   .get(isLogged, isAdmin, hasAccess('access__read'), adminHandles.get_admin_access());
+
+router
+  .route('/admin/shopping')
+  .get(
+    isLogged,
+    isAdmin,
+    hasAccess('shopping__read'),
+    pagination,
+    adminHandles.get_admin_shopping()
+  );
